# raspbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_EN.md  alembic.ini  pyproject.toml  pytest.ini  requests.http  requirements.txt  setup.cfg
infra/bot/: compose.yaml
infra/db/: compose.yaml
raspbot/: .dockerignore  .env.example  __init__.py  alembic.ini  main.py  sample.json  settings.py
raspbot/apicalls/: __init__.py  base.py  copyright.py  search.py
raspbot/bot/: __init__.py  bot.py  bot_testenv.py  handlers.py  keyboards.py  response.json  send_msg.py  start.py  text.py  utils.py
raspbot/bot/constants/: __init__.py  buttons.py  callback.py  commands.py  messages.py  states.py  text.py
raspbot/bot/routes/: __init__.py  handlers.py  keyboards.py  utils.py
raspbot/bot/routes/constants/: callback.py  text.py
raspbot/bot/start/: handlers.py  keyboards.py  utils.py
raspbot/bot/timetable/: __init__.py  handlers.py  keyboards.py  utils.py
raspbot/bot/timetable/constants/: text.py
raspbot/bot/users/: __init__.py  handlers.py  keyboards.py
raspbot/config/: exceptions.py  logging.py  settings.py  utils.py
raspbot/core/: __init__.py  base.py  email.py  exceptions.py  logging.py  sample.json
raspbot/db/: __init__.py  base.py  crud.py  models.py
raspbot/db/migrations/: env.py
raspbot/db/migrations/versions/: 1246259c7272_.py  19288bf9a4c0_install_unaccent.py  902076f2934f_add_updated_on_to_favorites.py  a8164161daf2_combine_recent_and_favorite.py  b435c77b8d73_station_related_models.py  d086293dcbf7_create_stations_db.py  ddb91d7bfc78_extend_user_model.py  (+2 more)
raspbot/db/routes/: __init__.py  crud.py  models.py  schema.py
raspbot/db/stations/: __init__.py  crud.py  fill_db.py  getdata.py  models.py  parse.py  process.py  sample.json  schedule.py  schema.py
raspbot/db/users/: __init__.py  crud.py  models.py
raspbot/services/: __init__.py  copyright.py  deptime.py  endings.py  other_date.py  prettify_datetimes.py  pretty_day.py  routes.py  shortener.py  split.py  strip.py  timetable.py  users.py
raspbot/services/shorteners/: __init__.py  short_point.py  short_region.py  short_route.py
tests/: conftest.py  test_insert.py
tests/fixtures/: fixture_db.py  fixture_db_data.py
