[tool.poetry]
name = "raspbot"
version = "0.1.0"
description = ""
authors = ["Ilya Kutilin <ilyakutilin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.3"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.13"
pydantic = "^1.10.7"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
aiolimiter = "^1.1.0"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pep8-naming = "^0.13.3"
flake8-return = "^1.2.0"
flake8-isort = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
